# audit-redactor

./: .gitignore  Dockerfile  Makefile  PLAN.md  README.md  pyproject.toml  redact.sh
src/audit_redactor/: batch.py  cli.py  pipeline.py
src/audit_redactor/appliers/: filename.py  html_render.py  image_ocr.py  output_guard.py  pdf.py  text.py
src/audit_redactor/data/: company_names.txt
src/audit_redactor/detectors/: __init__.py  api_keys.py  base.py  claude_augment.py  company_list.py  date_time.py  platform_identity.py  regex_detectors.py  text.py
src/audit_redactor/handlers/: __init__.py  html_handler.py  image_handler.py  json_handler.py  markdown_handler.py  pdf_handler.py
tests/: conftest.py  test_api_keys.py  test_claude_augment.py  test_cli.py  test_company_list.py  test_date_time.py  test_filename.py  test_html_handler.py  test_image_handler.py  test_json_handler.py  test_markdown_handler.py  test_output_guard.py  test_pdf_handler.py  test_pipeline.py  test_platform_identity.py  test_regex_detectors.py  test_text_applier.py
