[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-redactor"
version = "0.1.0"
description = "Hybrid, auditable redaction tool for PDF/PNG/JPEG/Markdown/JSON/HTML before sharing with auditors."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "click>=8.1",
    "pymupdf>=1.24",
    "pillow>=10.1",
    "pytesseract>=0.3.10",
    "beautifulsoup4>=4.12",
    "markdown>=3.6",
    # Keep this pin in sync with the Dockerfile's FROM base image tag
    # (mcr.microsoft.com/playwright/python:vX.Y.Z-noble) -- they must match
    # exactly, or the image's pre-installed Chromium build won't match what
    # this Python package expects and Playwright will fail at runtime. Only
    # bump either one after confirming the target version is actually
    # published on PyPI (`pip index versions playwright`) -- see Dockerfile.
    "playwright==1.60.0",
    "transformers>=4.42",
    "torch>=2.3",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
audit-redactor = "audit_redactor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
audit_redactor = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # PyMuPDF's SWIG-generated bindings create a few internal plumbing types
    # (SwigPyObject, SwigPyPacked, swigvarlink) without a __module__
    # attribute; CPython's import system warns about it on every `import
    # fitz`. Purely cosmetic -- unrelated to PDF-handling correctness, and
    # not something fixable from our side (upstream SWIG codegen issue,
    # already on the latest PyMuPDF release). Narrowly scoped to this exact
    # message so unrelated deprecation warnings still surface normally.
    "ignore:builtin type Swig.*has no __module__ attribute:DeprecationWarning",
]
